--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 </head>
 <body>
   <div class="container">
-    <img src="logo.png" alt="Burning Art Horizons Logo">
+    <img src="logo.gif" alt="Burning Art Horizons Logo">
     <h1>BURNING ART<br>HORIZONS</h1>
   </div>
 </body>
