--- a/minitest.html
+++ b/minitest.html
@@ -6,7 +6,7 @@
   <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </head>
 <body>
-  <h1>Test reCAPTCHA</h1>
+  <h1>reCAPTCHA Test</h1>
   <div class="g-recaptcha" data-sitekey="6Lc8vHErAAAAABJ6kh_FCSWu7gB0DvgNXIOtIrBT"></div>
 </body>
 </html>
